Switch to half statless approach - store sessions in database and cache recently revoked sessions in redis for fast read
